Fix service allignment Refactor logo animation styles for clarity and update service links across multiple HTML files to improve navigation and user experience.

--- a/freightforwarding.html
+++ b/freightforwarding.html
@@ -560,33 +560,57 @@
                                 </div>
                                 <ul class="list-area">
                                     <li>
-                                        <a href="service-details.html">
+                                        <a href="service.html">
                                             <i class="fa-solid fa-chevrons-right"></i>
-                                            What We Do
+                                            All Services
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="service-details.html">
+                                        <a href="lastmile.html">
                                             <i class="fa-solid fa-chevrons-right"></i>
-                                            Request a Freight
+                                            Last Mile Delivery
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="service-details.html">
+                                        <a href="midmile.html">
                                             <i class="fa-solid fa-chevrons-right"></i>
-                                            Track & Trace
+                                            Mid Mile Delivery
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="service-details.html">
+                                        <a href="hyperlocal.html">
                                             <i class="fa-solid fa-chevrons-right"></i>
-                                            Rail Freight
+                                            Hyperlocal Delivery
                                         </a>
                                     </li>
                                     <li>
-                                        <a href="service-details.html">
+                                        <a href="longhaultransportation.html">
                                             <i class="fa-solid fa-chevrons-right"></i>
-                                            Maritime Transport
+                                            Long Haul Transportation
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="warehousing.html">
+                                            <i class="fa-solid fa-chevrons-right"></i>
+                                            Warehousing
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="freightforwarding.html">
+                                            <i class="fa-solid fa-chevrons-right"></i>
+                                            Freight Forwarding
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="airfreight.html">
+                                            <i class="fa-solid fa-chevrons-right"></i>
+                                            Air Freight
+                                        </a>
+                                    </li>
+                                    <li>
+                                        <a href="packersnmovers.html">
+                                            <i class="fa-solid fa-chevrons-right"></i>
+                                            Packers & Movers
                                         </a>
                                     </li>
                                 </ul>
