Update footer copyright information across multiple HTML files to include developer credit for GITCS. and center the teams images in mobile

--- a/lastmile.html
+++ b/lastmile.html
@@ -726,7 +726,7 @@
                     </div>
                 </div>
                 <div class="footer-bottom">
-                    <p>© All Copyright 2025 by <a href="index.html">EtashDeliveries</p>
+                    <p>© All Copyright 2025 by <a href="index.html">EtashDeliveries</a> Developed by <a href="https://gitcservices.com/">GITCS</a><p>
                 </div>
             </div>
         </footer> 
