--- a/shipping.html
+++ b/shipping.html
@@ -986,7 +986,7 @@
                     </div>
                 </div>
                 <div class="footer-bottom">
-                    <p>© All Copyright 2025 by <a href="index.html">Etash Deliveries</a></p>
+                    <p>© All Copyright 2025 by <a href="index.html">Etash Deliveries</a> Developed by <a href="https://gitcservices.com/">GITCS</a><p>
                 </div>
             </div>
         </footer> 
