--- a/contact.html
+++ b/contact.html
@@ -791,7 +791,7 @@
                     </div>
                 </div>
                 <div class="footer-bottom">
-                    <p>© All Copyright 2025 by <a href="index.html">EtashDeliveries</p>
+                    <p>© All Copyright 2025 by <a href="index.html">EtashDeliveries</a> Developed by <a href="https://gitcservices.com/">GITCS</a><p>
                 </div>
             </div>
         </footer> 
