--- a/index.html
+++ b/index.html
@@ -1081,7 +1081,7 @@
                 <img src="assets/img/team/ecologi2.png" alt="img">
             </div>
             <div class="shape-2" style="position: absolute; bottom: 20px; right: 20px; width: 350px; z-index: 0;">
-                <img src="assets/img/truck delivery.png" alt="img" style="width: 100%;">
+                <img src="assets/img/stock_delivery_man.png" alt="img" style="width: 100%;">
             </div>
             <div class="container">
                 <div class="section-title text-center">
