updated partnership application form and al other changes

--- a/index.html
+++ b/index.html
@@ -1215,7 +1215,7 @@
                                     <a href="#"><i class="fab fa-facebook-f"></i></a> -->
                                 </div>
                                 <div class="team-image">
-                                    <img  src="assets/img/team/MDSir (2) (1).jpg" alt="img">
+                                    <img  src="assets/img/team/MD.jpeg" alt="img">
                                 </div>
                             <div class="team-content">
                                 <h5><a href="team-details.html">Capt Mridumoy Dutta</a></h5>
@@ -1233,7 +1233,7 @@
                                 <a href="#"><i class="fab fa-facebook-f"></i></a> -->
                             </div>
                             <div class="team-image">
-                                <img  src="assets/img/team/DPsir (2) (1).jpg" alt="img">
+                                <img  src="assets/img/team/DP.jpeg" alt="img">
                             </div>
                             <div class="team-content">
                                 <h5><a href="team-details.html">Dipankar Phukan</a></h5>
@@ -1251,7 +1251,7 @@
                                 <a href="#"><i class="fab fa-facebook-f"></i></a> -->
                             </div>
                             <div class="team-image">
-                                <img src="assets/img/team/SJ (1).jpg" alt="img">
+                                <img src="assets/img/team/SJ.jpeg" alt="img">
                             </div>
                             <div class="team-content">
                                 <h5><a href="team-details.html">Saurav Jakhar</a></h5>
@@ -1364,7 +1364,7 @@
             <div class="container">
                 <div class="section-title text-center">
                     <h6 class="wow fadeInUp"><i class="fa-regular fa-arrow-left-long"></i>testimonial<i class="fa-regular fa-arrow-right-long"></i></h6>
-                    <h2 class="wow fadeInUp" data-wow-delay=".2s">What our clients say</h2>
+                    <h2 class="wow fadeInUp" data-wow-delay=".2s">What our customers say</h2>
                 </div>
                 <div class="array-button">
                     <button class="array-prev"><i class="fa-solid fa-arrow-left-long"></i></button>
