updated the video section

--- a/about.html
+++ b/about.html
@@ -590,7 +590,7 @@
                                 <div class="about-image-2 wow fadeInUp" data-wow-delay=".4s">
                                     <img src="assets/img/about/" alt="img">
                                     <div class="video-box">
-                                        <a href="https://www.youtube.com/watch?v=Cn4G2lZ_g2I" class="video-btn video-popup">
+                                        <a href="assets/Vid.mp4" class="video-btn video-popup">
                                             <i class="fas fa-play"></i>
                                         </a>
                                     </div>
