updated index page team section

--- a/index.html
+++ b/index.html
@@ -211,6 +211,11 @@
                     margin: 0 auto;
                     display: block;
                 }
+                .team-box-items .team-content {
+                    margin-top: -100px !important; 
+                    padding-left: 10px !important;
+                    padding-right: 10px !important;
+                }
             }
             
             /* Team Hover Effects Fix */
@@ -342,13 +347,6 @@
                 padding: 0;
                 width: auto; /* Only as wide as content */
                 display: block;
-            }
-            @media (max-width: 575px) {
-                .team-box-items .team-image img,
-                .team-box-items .team-content {
-                    width: 140px;
-                    height: 140px;
-                }
             }
         </style>
     </head>
