--- a/about.html
+++ b/about.html
@@ -129,6 +129,11 @@
                     margin: 0 auto;
                     display: block;
                 }
+                .team-box-items .team-content {
+                    margin-top: -100px !important; 
+                    padding-left: 10px !important;
+                    padding-right: 10px !important;
+                }
             }
             /* Team Hover Effects Fix */
             .team-box-items {
@@ -276,13 +281,6 @@
                 padding: 0;
                 width: auto; /* Only as wide as content */
                 display: block;
-            }
-            @media (max-width: 575px) {
-                .team-box-items .team-image img,
-                .team-box-items .team-content {
-                    width: 140px;
-                    height: 140px;
-                }
             }
         </style>
         <style>
